// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vault Deposit can go back from full fees descriptions 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthXl-18 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-359 makeStyles-root-355"
        >
          <h2
            class="MuiTypography-root-56 MuiTypography-h6-66"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
            >
              <div
                class="MuiGrid-root-86 makeStyles-logoContainer-358 MuiGrid-item-88"
              >
                <div
                  class="makeStyles-root-360"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-361"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-item-88"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-mode-356 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
                >
                  Deposit
                </p>
                <p
                  class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextPrimary-81"
                >
                  Curve.fi renBTC/wBTC/sBTC
                </p>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-362 makeStyles-content-1 MuiDialogContent-dividers-363"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
              >
                Available: 0.0
              </p>
            </div>
            <div
              class="MuiGrid-root-86 WithStyles(ForwardRef(Grid))-root-364 WithStyles(ForwardRef(Grid))-root-365 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <div
                class="MuiButtonGroup-root-367"
                role="group"
              >
                <button
                  aria-label="25%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    25
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
                <button
                  aria-label="50%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    50
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
                <button
                  aria-label="75%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    75
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
                <button
                  aria-label="100%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-373 MuiButtonGroup-groupedHorizontal-374 MuiButtonGroup-groupedOutlined-381 MuiButtonGroup-groupedOutlinedHorizontal-382 MuiButtonGroup-groupedOutlined-381 makeStyles-button-366 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    100
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-454"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root-394 MuiTextField-root-393 WithStyles(ForwardRef(TextField))-root-391 WithStyles(ForwardRef(TextField))-root-392 MuiFormControl-fullWidth-397"
          >
            <div
              class="MuiInputBase-root-413 MuiOutlinedInput-root-398 MuiInputBase-fullWidth-423 MuiInputBase-formControl-414"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input-424 MuiOutlinedInput-input-408"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="Type an amount to deposit"
                spellcheck="false"
                style="text-align: right;"
                type="text"
                value="0"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-431 MuiOutlinedInput-notchedOutline-407"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-432"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="makeStyles-titleContainer-437"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58"
              >
                Fees
              </p>
              <svg
                aria-hidden="true"
                aria-label="see fees descriptions"
                class="MuiSvgIcon-root-312 makeStyles-helpIcon-439 MuiSvgIcon-colorPrimary-313"
                focusable="false"
                title="Click to see full description"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                />
              </svg>
            </div>
            <hr
              class="MuiDivider-root-321 makeStyles-divider-436"
            />
            <div
              class="MuiGrid-root-86 MuiGrid-container-87"
            >
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-451 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.2%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-451 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Strategist Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.1%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-451 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Withdraw Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.5%
                </h6>
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 WithStyles(ForwardRef(Button))-root-452 WithStyles(ForwardRef(Button))-root-453 MuiButton-containedPrimary-229 MuiButton-containedSizeLarge-240 MuiButton-sizeLarge-242 MuiButton-disabled-233 MuiButton-fullWidth-243 MuiButtonBase-disabled-250"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-221"
            >
              Deposit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Vault Deposit can see full fees descriptions 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthXl-18 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiGrid-root-86 makeStyles-root-341 MuiGrid-container-87"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95 MuiGrid-justify-content-xs-space-between-106"
          >
            <p
              class="MuiTypography-root-56 makeStyles-title-342 MuiTypography-body1-58 MuiTypography-displayInline-84"
            >
              Fee Information
            </p>
            <button
              class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-text-222 makeStyles-backButton-4 MuiButton-textPrimary-223"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-221"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-312 makeStyles-arrowIcon-5"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                  />
                </svg>
                Back
              </span>
              <span
                class="MuiTouchRipple-root-345"
              />
            </button>
          </div>
          <div
            class="makeStyles-content-343"
          >
            <p
              class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
            >
              Fees are charged on certain Sett Vaults, and are sent to the BadgerDAO treasury, or shared with the strategist who wrote the vault strategy.
            </p>
            <hr
              class="MuiDivider-root-321 makeStyles-divider-344"
            />
            <div>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Performance Fees are assessed on the profit that the strategy creates
              </p>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Management Fees are charged on the entire principal over the course of a year
              </p>
              <p
                class="MuiTypography-root-56 MuiTypography-body2-57 MuiTypography-colorTextSecondary-82"
              >
                - Both Performance and Management Fees are factored into all ROI calculations
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Vault Deposit displays sett information 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root-6"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-21"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-9 MuiDialog-scrollPaper-7"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="MuiPaper-root-23 MuiDialog-paper-10 MuiDialog-paperScrollPaper-11 MuiDialog-paperWidthXl-18 MuiDialog-paperFullWidth-19 MuiPaper-elevation24-50 MuiPaper-rounded-24"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-55 makeStyles-root-51"
        >
          <h2
            class="MuiTypography-root-56 MuiTypography-h6-66"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
            >
              <div
                class="MuiGrid-root-86 makeStyles-logoContainer-54 MuiGrid-item-88"
              >
                <div
                  class="makeStyles-root-189"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-190"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-item-88"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-mode-52 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
                >
                  Deposit
                </p>
                <p
                  class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextPrimary-81"
                >
                  Curve.fi renBTC/wBTC/sBTC
                </p>
              </div>
            </div>
          </h2>
        </div>
        <div
          class="MuiDialogContent-root-191 makeStyles-content-1 MuiDialogContent-dividers-192"
        >
          <div
            class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-align-items-xs-center-95"
          >
            <div
              class="MuiGrid-root-86 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82"
              >
                Available: 0.0
              </p>
            </div>
            <div
              class="MuiGrid-root-86 WithStyles(ForwardRef(Grid))-root-193 WithStyles(ForwardRef(Grid))-root-194 MuiGrid-item-88 MuiGrid-grid-xs-12-132 MuiGrid-grid-sm-6-140"
            >
              <div
                class="MuiButtonGroup-root-196"
                role="group"
              >
                <button
                  aria-label="25%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-202 MuiButtonGroup-groupedHorizontal-203 MuiButtonGroup-groupedOutlined-210 MuiButtonGroup-groupedOutlinedHorizontal-211 MuiButtonGroup-groupedOutlined-210 makeStyles-button-195 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    25
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-331"
                  />
                </button>
                <button
                  aria-label="50%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-202 MuiButtonGroup-groupedHorizontal-203 MuiButtonGroup-groupedOutlined-210 MuiButtonGroup-groupedOutlinedHorizontal-211 MuiButtonGroup-groupedOutlined-210 makeStyles-button-195 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    50
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-331"
                  />
                </button>
                <button
                  aria-label="75%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-202 MuiButtonGroup-groupedHorizontal-203 MuiButtonGroup-groupedOutlined-210 MuiButtonGroup-groupedOutlinedHorizontal-211 MuiButtonGroup-groupedOutlined-210 makeStyles-button-195 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    75
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-331"
                  />
                </button>
                <button
                  aria-label="100%"
                  class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-outlined-225 MuiButtonGroup-grouped-202 MuiButtonGroup-groupedHorizontal-203 MuiButtonGroup-groupedOutlined-210 MuiButtonGroup-groupedOutlinedHorizontal-211 MuiButtonGroup-groupedOutlined-210 makeStyles-button-195 MuiButton-outlinedSizeSmall-237 MuiButton-sizeSmall-241"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label-221"
                  >
                    100
                    %
                  </span>
                  <span
                    class="MuiTouchRipple-root-331"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            class="MuiFormControl-root-255 MuiTextField-root-254 WithStyles(ForwardRef(TextField))-root-252 WithStyles(ForwardRef(TextField))-root-253 MuiFormControl-fullWidth-258"
          >
            <div
              class="MuiInputBase-root-274 MuiOutlinedInput-root-259 MuiInputBase-fullWidth-284 MuiInputBase-formControl-275"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="MuiInputBase-input-285 MuiOutlinedInput-input-269"
                inputmode="decimal"
                maxlength="79"
                minlength="1"
                pattern="^[0-9]*[.,]?[0-9]*$"
                placeholder="Type an amount to deposit"
                spellcheck="false"
                style="text-align: right;"
                type="text"
                value="0"
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-292 MuiOutlinedInput-notchedOutline-268"
                style="padding-left: 8px;"
              >
                <legend
                  class="PrivateNotchedOutline-legend-293"
                  style="width: 0.01px;"
                >
                  <span>
                    ​
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <div
            class="makeStyles-fees-3"
          >
            <div
              class="makeStyles-titleContainer-298"
            >
              <p
                class="MuiTypography-root-56 MuiTypography-body1-58"
              >
                Fees
              </p>
              <svg
                aria-hidden="true"
                aria-label="see fees descriptions"
                class="MuiSvgIcon-root-312 makeStyles-helpIcon-300 MuiSvgIcon-colorPrimary-313"
                focusable="false"
                title="Click to see full description"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
                />
              </svg>
            </div>
            <hr
              class="MuiDivider-root-321 makeStyles-divider-297"
            />
            <div
              class="MuiGrid-root-86 MuiGrid-container-87"
            >
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-328 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.2%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-328 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Strategist Performance Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.1%
                </h6>
              </div>
              <div
                class="MuiGrid-root-86 MuiGrid-container-87 MuiGrid-justify-content-xs-space-between-106"
              >
                <p
                  class="MuiTypography-root-56 makeStyles-specName-328 MuiTypography-body1-58 MuiTypography-colorTextSecondary-82 MuiTypography-displayInline-84"
                >
                  Withdraw Fee
                </p>
                <h6
                  class="MuiTypography-root-56 MuiTypography-subtitle2-68 MuiTypography-displayInline-84"
                >
                  0.5%
                </h6>
              </div>
            </div>
          </div>
          <button
            aria-label="Deposit"
            class="MuiButtonBase-root-249 MuiButton-root-220 MuiButton-contained-228 WithStyles(ForwardRef(Button))-root-329 WithStyles(ForwardRef(Button))-root-330 MuiButton-containedPrimary-229 MuiButton-containedSizeLarge-240 MuiButton-sizeLarge-242 MuiButton-disabled-233 MuiButton-fullWidth-243 MuiButtonBase-disabled-250"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-221"
            >
              Deposit
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
